# matrix-rust-sdk-crypto-wasm

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  build.rs  index-wasm-esm.mjs  index.cjs  index.d.ts  index.js  index.mjs  node.cjs  node.js  node.mjs  package.json  tsconfig.json
.cargo/: config
.github/: CODEOWNERS  latest_matrix_sdk_failed_issue_template.md
.github/workflows/: ci.yml  latest-matrix-sdk-crypto.yml  netlify.yaml  release.yml
scripts/: build.sh  epilogue.js
src/: backup.rs  dehydrated_devices.rs  device.rs  encryption.rs  error.rs  events.rs  future.rs  identifiers.rs  identities.rs  js.rs  lib.rs  libolm_migration.rs  machine.rs  qr_login.rs  requests.rs  responses.rs  store.rs  sync_events.rs  tracing.rs  types.rs  verification.rs  vodozemac.rs
src/vodozemac/: ecies.rs  mod.rs  pk_encryption.rs  secure_channel.rs
tests/: asyncload.test.js  attachment.test.js  backup.test.js  backup_recovery_key.test.js  dehydrated_devices.test.js  dehydrated_devices.test.ts  device.test.js  ecies.test.ts  encryption.test.js  encryption.test.ts  events.test.js  global.d.ts  helper.js  identifiers.test.js  libolm_migration.test.ts  machine.test.js  machine.test.ts  pk_encryption.test.ts  qr_code.test.js  requests.test.js  secure_channel.test.js  secure_channel.test.ts  sync_events.test.js  tracing.test.js  vodozemac_types.test.ts
