[package]
name = "matrix-sdk-crypto-wasm"
description = "Matrix encryption library, for JavaScript"
authors = ["Ivan Enderlin <ivane@element.io>"]
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk-wasm"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk-wasm"
rust-version = "1.70"
version = "0.0.0"
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

################################################################################
#
# Configuration for `wasm-pack`
#
# See https://rustwasm.github.io/docs/wasm-pack/cargo-toml-configuration.html
# for details of what can be set here.
#
################################################################################

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
# Tell wasm-opt to:
#  * `-Oz`: optimise for size
#  * `-g`: include the "name" section (which holds the printable names for
#    symbols) in the output.
wasm-opt = ['-Oz', '-g']

################################################################################

[profile.release]
# Tell cargo to run `rustc` with `-Oz` - ie, to optimize for size.
# https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[features]
default = ["qrcode"]
qrcode = ["matrix-sdk-crypto/qrcode", "dep:matrix-sdk-qrcode"]

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = "0.1.7"
futures-util = "0.3.27"
http = "0.2.6"
js-sys = "0.3.49"
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk", features = ["js"], rev = "a699ad911b61edcecdad6fcfe2b5f2e406e07fc7" }
matrix-sdk-indexeddb = { git = "https://github.com/matrix-org/matrix-rust-sdk", default-features = false, features = ["e2e-encryption"], rev = "a699ad911b61edcecdad6fcfe2b5f2e406e07fc7" }
matrix-sdk-qrcode = { git = "https://github.com/matrix-org/matrix-rust-sdk", optional = true, rev = "a699ad911b61edcecdad6fcfe2b5f2e406e07fc7" }
serde = "1.0.91"
serde_json = "1.0.91"
serde-wasm-bindgen = "0.5.0"
tracing = { version = "0.1.36", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.14", default-features = false, features = ["registry", "std", "ansi"] }
url = "2.5.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.33"
zeroize = "1.6.0"
wasm-bindgen-test = "0.3.37"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }

[dependencies.matrix-sdk-crypto]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "a699ad911b61edcecdad6fcfe2b5f2e406e07fc7"
default_features = false
features = ["js", "automatic-room-key-forwarding", "message-ids"]
